# magical-haskell-exercise

./: README.md  magical-haskell-exercise.cabal
answer/Ch03/: Answer.hs
exercise/Ch03/: Definition.hs  Exercise.hs
test/: Main.hs  TestUtil.hs
test/Ch03/: Test.hs
